# KitsuPE

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
basic_applications/: CMakeLists.txt
basic_applications/basic_c_application/: CMakeLists.txt  main.c  main.h
basic_applications/basic_cpp_application/: CMakeLists.txt  main.cpp  main.hpp  pong.cpp  pong.hpp
basic_applications/basic_gui_application/: CMakeLists.txt  main.c  main.h
basic_applications/basic_library/: CMakeLists.txt  main.c  main.h
basic_applications/basic_library/include/basic_library/: basic_library.h
debug_tool/: CMakeLists.txt  main.cpp
foxylib/: CMakeLists.txt
foxylib/include/foxylib/: constants.h  platform.h  status.h
foxylib/include/foxylib/utils/: helpers.h
foxylib/include/foxylib/utils/console/: commands.h  console.h  types.h
foxylib/include/foxylib/utils/logging/: logging.h  loglevel.h  types.h
foxylib/utils/: helpers.c
foxylib/utils/console/: commands.c  console.c
foxylib/utils/logging/: logging.c
foxywinapi/: CMakeLists.txt  foxywinapi.cpp  foxywinapi.hpp  lazy_importer.hpp  pe_file.hpp
pe_parser/: CMakeLists.txt  main.cpp
pe_parser/old/: main.cpp  main.hpp
pe_parser/old/pe/: pe_file.cpp  pe_file.hpp
pe_shared/: foxy_pe.hpp  pe_types.hpp
pe_stub/: CMakeLists.txt  main.cpp
shellcode/: CMakeLists.txt  extract.py  main.cpp
shellcode/x64/: shellcode.bin.h
shellcode_test/: CMakeLists.txt  main.cpp
